AppSubsystem/APIGateway/nlb-vpclink/v1/cf-nlb-vpclink.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Combined AWS CloudFormation template to provision NLB with ALB Target Group and VPC Link

Parameters:
  AppShortName:
    Description: Application name
    Type: String

  EnvName:
    Description: Environment Name
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c      
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c

  # NLB Parameters
  NLBSubnetIds:
    Type: CommaDelimitedList
    Description: VPC Subnet ids for NLB

  NLBName:
    Type: String
    Description: NLB Name

  TargetALBArn:
    Type: String
    Description: Target ALB Arn

  VpcId:
    Type: String
    Description: VPC ID

  HealthCheckPath:
    Type: String
    Description: Health Check Path

  PrefixListNLBIngress:
    Type: String
    Description: Prefix list for Whitelisted NLB Ingress
    Default: ""

  APIGWVPCESecurityGroupID:
    Type: String
    Description: Security Group ID for APIGW
    Default: ""

  VPCSubnetCidrAppAZ1:
    Type: String
    Description: AZ1 App Subnet

  VPCSubnetCidrAppAZ2:
    Type: String
    Description: AZ2 App Subnet

  VPCSubnetCidrAppAZ3:
    Type: String
    Description: AZ3 App Subnet
    Default: ""

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasTargetALBArn: !Not [!Equals [!Ref TargetALBArn, '']]
  HasPrefixListNLBIngress: !Not [!Equals [!Ref PrefixListNLBIngress, '']]
  HasAPIGWSGID: !Not [!Equals [!Ref APIGWVPCESecurityGroupID, '']]
  HasVPCSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, '']]

Resources:
  # NLB Security Group
  NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub "${NLBName}-sg"
      GroupDescription: !Sub 'Security group for ${NLBName}'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - !If
          - HasPrefixListNLBIngress
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            SourcePrefixListId: !Ref PrefixListNLBIngress
          - !Ref "AWS::NoValue"
        - !If
          - HasAPIGWSGID
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            SourceSecurityGroupId: !Ref APIGWVPCESecurityGroupID
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: APP CIDR 1 IP Range
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: APP CIDR 2 IP Range
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: APP CIDR 3 IP Range
          - !Ref "AWS::NoValue"
      Tags:
        - Key: "IaCVersion"
          Value: "AppSubSystem-nlb-vpclink-v1"

  # Network Load Balancer
  IngressNLB:
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]  
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      IpAddressType: "ipv4"
      Subnets: !Ref NLBSubnetIds
      Type: "network"
      Scheme: "internal"
      Name: !Ref NLBName
      EnforceSecurityGroupInboundRulesOnPrivateLinkTraffic: "off"
      SecurityGroups:
        - !Ref NLBSecurityGroup
      LoadBalancerAttributes:
        - Key: "deletion_protection.enabled"
          Value: "true"
      Tags:
        - Key: "IaCVersion"
          Value: "AppSubSystem-nlb-vpclink-v1"

  # NLB Target Group
  IngressNLBTG:
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete] 
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200-399"
      HealthCheckPath: !Ref HealthCheckPath
      Port: 443
      Targets:
      - !If
        - HasTargetALBArn
        - Port: 443
          Id: !Ref TargetALBArn
        - !Ref "AWS::NoValue"
      HealthCheckEnabled: true
      UnhealthyThresholdCount: 3
      HealthCheckTimeoutSeconds: 10
      Name: !Sub ${NLBName}-TG
      VpcId: !Ref VpcId
      HealthyThresholdCount: 3
      HealthCheckProtocol: "HTTPS"
      TargetType: "alb"
      HealthCheckPort: "traffic-port"
      Protocol: "TCP"
      Tags:
        - Key: "IaCVersion"
          Value: "AppSubSystem-nlb-vpclink-v1"

  # NLB Listener
  IngressNLBListener:
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]  
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref IngressNLB
      Protocol: "TCP"
      DefaultActions:
      - Type: "forward"
        ForwardConfig:
          TargetGroups:
          - TargetGroupArn: !Ref IngressNLBTG
      Port: 443

  # VPC Link
  VpcLink:
    Type: 'AWS::ApiGateway::VpcLink'
    DependsOn: IngressNLB
    Properties:
      Name: !Sub "${AppShortName}-${EnvName}-vpclink-nlb"
      TargetArns:
        - !Ref IngressNLB
      Tags:
        - Key: IaCVersion
          Value: AppSubSystem-nlb-vpclink-v1

Outputs:
  NLBArn:
    Description: ARN of the Network Load Balancer
    Value: !Ref IngressNLB

  NLBDNSName:
    Description: DNS name of the Network Load Balancer
    Value: !GetAtt IngressNLB.DNSName

  VpcLinkId:
    Description: ID of the VPC Link
    Value: !Ref VpcLink

  NLBSecurityGroupId:
    Description: Security Group ID for the NLB
    Value: !Ref NLBSecurityGroup
